# vulkan-learning-project

./: CMakeLists.txt  README.org  build.sh  compile.sh
.cache/clangd/index/: cocoa_init.m.66B9B9B1FE6E0686.idx  cocoa_joystick.h.A52F6ADA19270418.idx  cocoa_joystick.m.8848A167F2672334.idx  cocoa_monitor.m.94A148BF01B80776.idx  cocoa_platform.h.C93BCCC9C52E7747.idx  cocoa_time.c.96F9C18A37FA2181.idx  cocoa_time.h.550C2F166B3D7B44.idx  cocoa_window.m.6306DB81D990BA79.idx  context.c.F85A624506386A1C.idx  egl_context.c.D4B6FB07BAF22395.idx  glfw3.h.F2A7E19D2FEA4CA6.idx  helloTriangleApp.cpp.4EA4E2DA6EDB442C.idx  helloTriangleApp.h.9EEA213D4E5558B8.idx  init.c.3883424EDC40605F.idx  input.c.4E5B6DB1DA10958F.idx  internal.h.B5CFCC11E2927D0A.idx  main.cpp.ADF87075D75F420E.idx  mappings.h.BE35C8EC3F352614.idx  monitor.c.D3C6859C1E2374DE.idx  nsgl_context.m.418E5AB7FBE9DBDD.idx  null_init.c.46C991F485092AA3.idx  null_joystick.c.8FA537F5BDFC044A.idx  null_joystick.h.B5C8751170AD7024.idx  null_monitor.c.4476B53F6A2CFB70.idx  null_platform.h.ECB197A79F9239A9.idx  null_window.c.A25851E57673364D.idx  osmesa_context.c.8528DE5D8D08CDE5.idx  platform.c.66D839325EDE4745.idx  platform.h.B3FEC626B1FAF345.idx  posix_module.c.E2A9B64EEA722681.idx  posix_thread.c.4B7D251CBD535390.idx  posix_thread.h.2F44693E4A5BBF71.idx  vulkan.c.D4E321CA1B6DE734.idx  window.c.E417A11F13457EAF.idx
res/shader/: shader.frag  shader.vert
src/: helloTriangleApp.cpp  helloTriangleApp.h  main.cpp
